--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "body-parser": "^1.9.2",
+    "cors": "^2.8.5",
     "express": "^4.10.1",
     "morgan": "^1.4.1",
     "mysql": "^2.16.0",
